--- a/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/light_rifle.yml
+++ b/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/light_rifle.yml
@@ -39,16 +39,18 @@
 - type: entity
   parent: BaseCartridgeLightRifle
   id: CartridgeLightRifleFMJ
-  name: cartridge (.30 rifle jacketed)
+  name: cartridge (.30 rifle plasteel core)
   suffix: Harmony
-  description: A classic intermediate cartridge used by many combat rifles and LMGs. Contains a hardened tungsten core encased within a steel jacket, improving the penetration capability of the cartridge exponentially. Damage against unarmored opponents leaves something to be desired, though.
+  description: A classic intermediate cartridge used by many combat rifles and LMGs. Contains a plasteel core with a reinforced plasma tip, improving the penetration capability of the cartridge exponentially. Damage against unarmored opponents leaves something to be desired, though.
   components:
   - type: CartridgeAmmo
     proto: BulletLightRifleFMJ
   - type: Sprite
+    sprite: _Harmony/Objects/Weapons/Guns/Ammunition/Casings/ammo_casing.rsi
     layers:
     - state: base
       map: [ "enum.AmmoVisualLayers.Base" ]
+      color: "#818181"
     - state: tip
       map: [ "enum.AmmoVisualLayers.Tip" ]
-      color: "#272727"
+      color: "#a400af"
