--- a/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Ammunition/Magazines/light_rifle.yml
+++ b/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Ammunition/Magazines/light_rifle.yml
@@ -51,9 +51,9 @@
 - type: entity
   parent: MagazineLightRifle
   id: MagazineLightRifleFMJ
-  name: magazine (.30 rifle jacketed)
+  name: magazine (.30 rifle plasteel core)
   suffix: Harmony
-  description: Curved 25-round double stack magazine for combat rifles. Intended to hold jacketed ammunition meant for dispatching armored targets.
+  description: Curved 25-round double stack magazine for combat rifles. Intended to hold plasteel-cored ammunition meant for dispatching armored targets.
   components:
   - type: BallisticAmmoProvider
     proto: CartridgeLightRifleFMJ
@@ -65,14 +65,14 @@
     - state: mag-1
       map: ["enum.GunVisualLayers.Mag"]
     - state: stripe
-      color: "#272727"
+      color: "#a400af"
   - type: Item
     inhandVisuals:
       left:
       - state: inhand-left-mag
       - state: inhand-left-stripe
-        color: "#272727"
+        color: "#a400af"
       right:
       - state: inhand-right-mag
       - state: inhand-right-stripe
-        color: "#272727"
+        color: "#a400af"
