--- a/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Ammunition/SpeedLoaders/magnum.yml
+++ b/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Ammunition/SpeedLoaders/magnum.yml
@@ -35,9 +35,9 @@
 - type: entity
   parent: BaseSpeedLoaderMagnum
   id: SpeedLoaderMagnumFMJ
-  name: speed loader (.45 magnum jacketed)
+  name: speed loader (.45 magnum plasteel core)
   suffix: Harmony
-  description: Designed to quickly refill an empty revolver, it fits up to six rounds. Intended to hold jacketed ammunition meant for dispatching armored targets.
+  description: Designed to quickly refill an empty revolver, it fits up to six rounds. Intended to hold plasteel-cored ammunition meant for dispatching armored targets.
   components:
   - type: BallisticAmmoProvider
     proto: CartridgeMagnumFMJ
