--- a/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Ammunition/Boxes/rifle.yml
+++ b/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Ammunition/Boxes/rifle.yml
@@ -19,9 +19,9 @@
 - type: entity
   parent: BaseMagazineBoxRifle
   id: MagazineBoxRifleFMJ
-  name: ammunition box (.20 rifle jacketed)
+  name: ammunition box (.20 rifle plasteel core)
   suffix: Harmony
-  description: A cardboard box of .20 rifle rounds. Intended to hold jacketed ammunition meant for dispatching armored targets.
+  description: A cardboard box of .20 rifle rounds. Intended to hold plasteel-cored ammunition meant for dispatching armored targets.
   components:
   - type: BallisticAmmoProvider
     capacity: 40
