--- a/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Ammunition/Magazines/pistol.yml
+++ b/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Ammunition/Magazines/pistol.yml
@@ -29,9 +29,9 @@
 - type: entity
   parent: MagazinePistol
   id: MagazinePistolFMJ
-  name: pistol magazine (.35 auto jacketed)
+  name: pistol magazine (.35 auto plasteel core)
   suffix: Harmony
-  description: 12-round single-stack magazine for pistols. Intended to hold jacketed ammunition meant for dispatching armored targets.
+  description: 12-round single-stack magazine for pistols. Intended to hold plasteel-cored ammunition meant for dispatching armored targets.
   components:
   - type: BallisticAmmoProvider
     capacity: 12
@@ -43,17 +43,17 @@
     - state: mag-1
       map: ["enum.GunVisualLayers.Mag"]
     - state: stripe
-      color: "#272727"
+      color: "#a400af"
   - type: Item
     inhandVisuals:
       left:
       - state: inhand-left-mag
       - state: inhand-left-stripe
-        color: "#272727"
+        color: "#a400af"
       right:
       - state: inhand-right-mag
       - state: inhand-right-stripe
-        color: "#272727"
+        color: "#a400af"
 
 - type: entity
   parent: BaseMagazinePistolSubMachineGun
@@ -86,9 +86,9 @@
 - type: entity
   parent: BaseMagazinePistolSubMachineGun
   id: MagazinePistolSubMachineGunFMJ
-  name: SMG magazine (.35 auto jacketed)
+  name: SMG magazine (.35 auto plasteel core)
   suffix: Harmony
-  description: 25-round double-stack magazine for submachine guns. Intended to hold jacketed ammunition meant for dispatching armored targets.
+  description: 25-round double-stack magazine for submachine guns. Intended to hold plasteel-cored ammunition meant for dispatching armored targets.
   components:
   - type: BallisticAmmoProvider
     capacity: 25
@@ -100,14 +100,14 @@
     - state: mag-1
       map: ["enum.GunVisualLayers.Mag"]
     - state: stripe
-      color: "#272727"
+      color: "#a400af"
   - type: Item
     inhandVisuals:
       left:
       - state: inhand-left-mag
       - state: inhand-left-stripe
-        color: "#272727"
+        color: "#a400af"
       right:
       - state: inhand-right-mag
       - state: inhand-right-stripe
-        color: "#272727"
+        color: "#a400af"
