--- a/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/rifle.yml
+++ b/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/rifle.yml
@@ -14,7 +14,7 @@
   parent: BaseBullet
   id: BulletRifleFMJ
   categories: [ HideSpawnMenu ]
-  name: bullet (0.20 rifle jacketed)
+  name: bullet (0.20 rifle plasteel core)
   components:
   - type: Projectile
     damage:
