--- a/Resources/Prototypes/_Goobstation/Entities/Clothing/Head/hardsuit-helmets.yml
+++ b/Resources/Prototypes/_Goobstation/Entities/Clothing/Head/hardsuit-helmets.yml
@@ -6,9 +6,12 @@
   description: A helmet with plating for stealth operations.
   components:
   - type: Sprite
-    sprite: _Goobstation/Clothing/Head/Hardsuits/cybersunstealth.rsi
-  - type: Clothing
-    sprite: _Goobstation/Clothing/Head/Hardsuits/cybersunstealth.rsi
+# Begin harmony change - changed sprite path
+#   sprite: _Goobstation/Clothing/Head/Hardsuits/cybersunstealth.rsi
+    sprite: _Harmony/Clothing/Head/Hardsuits/cybersunstealth.rsi
+# - type: Clothing
+#   sprite: _Goobstation/Clothing/Head/Hardsuits/cybersunstealth.rsi
+# End harmony change
   - type: PointLight
     color: green
   - type: PressureProtection
@@ -28,4 +31,26 @@
     - type: StealthOnMove
       passiveVisibilityRate: -0.5
       movementVisibilityRate: 0.6
+  - type: HandheldLight
+    addPrefix: false
+  - type: ToggleableLightVisuals
+    spriteLayer: light
+    clothingVisuals:
+      head:
+      - state: equipped-head-light
+        shader: unshaded
+      head-vox:
+      - state: equipped-head-light-vox
+        shader: unshaded
+  - type: Clothing
+    sprite: _Harmony/Clothing/Head/Hardsuits/cybersunstealth.rsi
+    clothingVisuals:
+      head:
+      - state: equipped-head
+      - state: equipped-head-unshaded
+        shader: unshaded
+      head-vox:
+      - state: equipped-head-vox
+      - state: equipped-head-unshaded-vox
+        shader: unshaded
     # Harmony end
