Major update: Resprites hristov, adds Hristov MK2 for nukies, rewords description flavor, adds new sound for Hristov, adjusts nukie bundle to include Hristov MK2

--- a/Resources/Prototypes/_Harmony/SoundCollections/gun_sounds.yml
+++ b/Resources/Prototypes/_Harmony/SoundCollections/gun_sounds.yml
@@ -20,3 +20,10 @@
   files:
   - /Audio/_Harmony/Weapons/Guns/Gunshots/python_fire1.ogg
   - /Audio/_Harmony/Weapons/Guns/Gunshots/python_fire2.ogg
+
+# Used in _Harmony/Entities/Objects/Weapons/Guns/Snipers/snipers.yml
+- type: soundCollection
+  id: HristovFire
+  files:
+  - /Audio/_Harmony/Weapons/Guns/Gunshots/hristov_fire1.ogg
+  - /Audio/_Harmony/Weapons/Guns/Gunshots/hristov_fire2.ogg
