--- a/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Snipers/snipers.yml
+++ b/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Snipers/snipers.yml
@@ -59,9 +59,9 @@
 - type: entity
   parent: [BaseWeaponRifle, BaseGunWieldable, BaseSyndicateContraband]
   id: WeaponSniperHristovHarmony
-  name: Hristov
+  name: Hristov AMR
   suffix: Harmony
-  description: A portable anti-materiel rifle. Fires armor piercing 14.5mm shells. Uses .60 anti-materiel ammo.
+  description: Field-tested in over 20 classified operations before being disseminated among the Syndicate, the Hristov was secretly developed by Cybersun's Advanced Kinetics division after multiple complaints of conventional high-calibre firearms being unable to match modern exosuit armor in frontline combat. Uses .60 anti-materiel ammo.
   components:
   - type: Sprite
     sprite: _Harmony/Objects/Weapons/Guns/Snipers/hristov.rsi
@@ -78,7 +78,9 @@
     - SemiAuto
     fireRate: 0.6
     soundGunshot:
-      path: /Audio/_Harmony/Weapons/Guns/Gunshots/hristov_fire_alt.ogg
+      collection: HristovFire
+      params:
+        volume: 3
   - type: ChamberMagazineAmmoProvider
     soundRack:
       path: /Audio/Weapons/Guns/Cock/ltrifle_cock.ogg
@@ -120,3 +122,30 @@
   - type: StaticPrice
     price: 3500
   - type: GunRequiresWield
+
+- type: entity
+  parent: WeaponSniperHristovHarmony
+  id: WeaponSniperHristovHarmonyNukie
+  name: Hristov MK-II AMR
+  suffix: Harmony, Nuke Ops
+  description: An experimental weapon, based off Cybersun's failed attempt at a service life extension program for the Hristov AMR. Developed in-house by the Gorlex Marauders, featuring lighter composites allowing for quicker movement, improved optics with a smart targeting system, and an under-barrel tactical device. Looks like the serial number has been filed off. Uses .60 anti-materiel ammo.
+  components:
+  - type: Sprite
+    sprite: _Harmony/Objects/Weapons/Guns/Snipers/hristov_nukie.rsi
+    layers:
+    - state: base
+      map: ["enum.GunVisualLayers.Base"]
+    - state: mag-0
+      map: ["enum.GunVisualLayers.Mag"]
+  - type: Clothing
+    sprite: _Harmony/Objects/Weapons/Guns/Snipers/hristov_nukie.rsi
+  - type: SpeedModifiedOnWield
+    walkModifier: 0.6
+    sprintModifier: 0.6
+  - type: Gun
+    soundGunshot:
+      path: /Audio/_Harmony/Weapons/Guns/Gunshots/hristov_fire_mk2.ogg
+      params:
+        volume: 3
+        maxDistance: 30
+    fireRate: 0.75
