--- a/Resources/Prototypes/_Harmony/Roles/MindRoles/mind_roles.yml
+++ b/Resources/Prototypes/_Harmony/Roles/MindRoles/mind_roles.yml
@@ -9,3 +9,11 @@
     exclusiveAntag: true
     roleType: TeamAntagonist
     subtype: role-subtype-blood-brother
+
+- type: entity
+  parent: MindRoleNukeops
+  id: MindRoleNukeopsSapper
+  name: Nukeops Sapper Role
+  components:
+  - type: MindRole
+    antagPrototype: NukeopsSapper
