--- a/Resources/Prototypes/_Harmony/Entities/Clothing/Head/hardsuit-helmets.yml
+++ b/Resources/Prototypes/_Harmony/Entities/Clothing/Head/hardsuit-helmets.yml
@@ -33,3 +33,35 @@
   - type: PressureProtection
     highPressureMultiplier: 0.72
     lowPressureMultiplier: 1000
+
+- type: entity
+  parent: [ ClothingHeadHelmetHardsuitSyndie, ClothingHeadSuitWithLightBase ]
+  id: ClothingHeadHelmetHardsuitSapper
+  name: blood-red sapper hardsuit helmet
+  description: A heavily armored helmet designed for work in Explosive Ordnance Disposal operations. Property of Gorlex Marauders.
+  components:
+  - type: Sprite
+    sprite: _Harmony/Clothing/Head/Hardsuits/syndiesapper.rsi
+  - type: HandheldLight
+    addPrefix: false
+  - type: ToggleableLightVisuals
+    spriteLayer: light
+    clothingVisuals:
+      head:
+      - state: equipped-head-light
+        shader: unshaded
+      head-vox:
+      - state: equipped-head-light-vox
+        shader: unshaded
+  - type: Clothing
+    clothingVisuals:
+      head:
+      - state: equipped-head
+      - state: equipped-head-unshaded
+        shader: unshaded
+      head-vox:
+      - state: equipped-head-vox
+      - state: equipped-head-unshaded-vox
+        shader: unshaded
+  - type: PointLight
+    color: yellow
