--- a/Resources/Prototypes/_Harmony/Entities/Clothing/OuterClothing/hardsuits.yml
+++ b/Resources/Prototypes/_Harmony/Entities/Clothing/OuterClothing/hardsuits.yml
@@ -38,6 +38,7 @@
   parent: [ ClothingOuterHardsuitSyndie, BaseSyndicateContraband ]
   id: ClothingOuterHardsuitSapper
   name: sapper hardsuit
+  suffix: Harmony
   description: A heavily padded hardsuit designed for work in Explosive Ordnance Disposal operations. Property of Gorlex Marauders.
   components:
   - type: Sprite
