--- a/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
+++ b/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
@@ -147,7 +147,7 @@
       fireCost: 150
     - proto: BulletLaserWindowPiercingMagnumHarmony
       fireCost: 150
-    - proto: BulletDisabler
+    - proto: BulletLaserDisablerMagnumHarmony
       fireCost: 100
   - type: BatterySelfRecharger
     autoRecharge: true
